syntax = "proto3";

package integration.grpc.hello;

option java_package = "org.springframework.integration.grpc.proto";

option java_multiple_files = true;

option java_outer_classname = "TypesProto";

// The request message containing the user's name.
message HelloRequest {

  string name = 1;

}

// The response message containing the greetings
message HelloReply {

  string message = 1;

}
